--- a/resources/js/plugins/i18n/locales/ua.json
+++ b/resources/js/plugins/i18n/locales/ua.json
@@ -219,7 +219,8 @@
     "field" : "Сфера",
     "region" : "Область",
     "clinic_diagnose" : "Клінічний діагноз",
-    "addNew" : "Додати користувача"
+    "addTitle" : "Додати користувача",
+    "editTitle": "Редагувати користувача",
   },
   "gender":{
     "man":"Человек",
@@ -227,7 +228,8 @@
   },
   "btnLabel":{
     "add":"Додати",
-    "save": "",
-    "cancel" : "Відмінити"
+    "save": "Зберегти",
+    "cancel" : "Відмінити",
+    "archiveConfirm" : "Так, архівувати"
   }
 }
