--- a/resources/js/plugins/i18n/locales/ua.json
+++ b/resources/js/plugins/i18n/locales/ua.json
@@ -231,5 +231,8 @@
     "save": "Зберегти",
     "cancel" : "Відмінити",
     "archiveConfirm" : "Так, архівувати"
+  },
+  "menu" : {
+    "Patients" : "Користувачі"
   }
 }
