--- a/resources/js/plugins/i18n/locales/ua.json
+++ b/resources/js/plugins/i18n/locales/ua.json
@@ -214,7 +214,7 @@
   "patient":{
     "full_name" : "ПІБ",
     "phone" : "Телефон",
-    "born_date" : "День рождение",
+    "born_date" : "День народження",
     "tags" :"Теги",
     "field" : "Сфера",
     "region" : "Область",
@@ -223,8 +223,8 @@
     "editTitle": "Редагувати користувача",
   },
   "gender":{
-    "man":"Человек",
-    "woman":"Женка"
+    "man":"Чоловік",
+    "woman":"Жінка"
   },
   "btnLabel":{
     "add":"Додати",
@@ -234,14 +234,14 @@
   },
   "menu" : {
     "Patients" : "Користувачі",
-    "Doctors" : "Доктора",
+    "Doctors" : "Лікарі",
   },
   "doctor":{
-    "addTitle" : "Додати доктора",
-    "editTitle": "Редагувати доктора",
-    "name" : "ФИО",
+    "addTitle" : "Додати лікаря",
+    "editTitle": "Редагувати лікаря",
+    "name" : "ПІБ",
     "email" : "Email",
-    "password" : "пароль",
-    "expire_at" : "Дата окончение подписки",
+    "password" : "Пароль",
+    "expire_at" : "Дата закінчення підписки",
   }
 }
