--- a/resources/js/plugins/i18n/locales/ua.json
+++ b/resources/js/plugins/i18n/locales/ua.json
@@ -217,6 +217,7 @@
     "born_date" : "День народження",
     "tags" :"Теги",
     "field" : "Сфера",
+    "comment" : "Коментар",
     "region" : "Область",
     "clinic_diagnose" : "Клінічний діагноз",
     "addTitle" : "Додати користувача",
