--- a/resources/js/plugins/i18n/locales/ua.json
+++ b/resources/js/plugins/i18n/locales/ua.json
@@ -232,8 +232,8 @@
     "save": "Зберегти",
     "cancel" : "Відмінити",
     "archiveConfirm" : "Так, архівувати",
-    "confirm" : "confirm",
-    "delete":"Delete"
+    "confirm" : "Підтвердити",
+    "delete":"Видалити"
   },
   "menu" : {
     "Patients" : "Користувачі",
@@ -246,8 +246,8 @@
     "email" : "Email",
     "password" : "Пароль",
     "expire_at" : "Дата закінчення підписки",
-    "ConfirmDelete" : "Are you confirm delete?",
-    "Removed" : "You are deleted doctor",
-    "RemovedMsg" : "Doctor removed",
+    "ConfirmDelete" : "Ви підтверджуєте видалення?",
+    "Removed" : "Видалення лікаря",
+    "RemovedMsg" : "Лікаря видалено!",
   }
 }
