--- a/resources/js/plugins/i18n/locales/ua.json
+++ b/resources/js/plugins/i18n/locales/ua.json
@@ -238,6 +238,7 @@
   "menu" : {
     "Patients" : "Користувачі",
     "Doctors" : "Лікарі",
+    "PromoCodes" : "Промокоды",
   },
   "doctor":{
     "addTitle" : "Додати лікаря",
@@ -249,5 +250,17 @@
     "ConfirmDelete" : "Ви підтверджуєте видалення?",
     "Removed" : "Видалення лікаря",
     "RemovedMsg" : "Лікаря видалено!",
+  },
+  "promo":{
+    "status" : "Доступный",
+    "code" : "Промокод",
+    "created_at" : "Дата створения",
+    "activated_at" : "Выкорастный",
+    "user_email" : "Почта пользотвателя",
+    "days" : "Дни",
+    "minutes" : "Минуты",
+    "promoCodes" : "Промокоды",
+    "addTitle" : "Додати промокоды",
+    "editTitle" : "Редактировать промокод",
   }
 }
