add doctor form

--- a/resources/js/plugins/i18n/locales/ua.json
+++ b/resources/js/plugins/i18n/locales/ua.json
@@ -250,6 +250,7 @@
     "ConfirmDelete" : "Ви підтверджуєте видалення?",
     "Removed" : "Видалення лікаря",
     "RemovedMsg" : "Лікаря видалено!",
+    "minutes" : "Количество доступніх минут на день"
   },
   "promo":{
     "status" : "Доступный",
