--- a/resources/js/plugins/i18n/locales/ua.json
+++ b/resources/js/plugins/i18n/locales/ua.json
@@ -239,6 +239,7 @@
     "Patients" : "Користувачі",
     "Doctors" : "Лікарі",
     "PromoCodes" : "Промокоды",
+    "AllPatients" : "Все пользователи",
   },
   "doctor":{
     "addTitle" : "Додати лікаря",
