--- a/resources/js/plugins/i18n/locales/ua.json
+++ b/resources/js/plugins/i18n/locales/ua.json
@@ -270,7 +270,10 @@
     "editTitle" : "Редактировать промокод",
     "endDate" : "Активен до",
     "today" : "Сегодня",
-    "LimitTimeToOneDay" : "Доступный на день"
+    "LimitTimeToOneDay" : "Доступный на день",
+    "todayEnd" : "На  сегодня оставшихся минут",
+    "youHaveNotAccess" : "У вас нет доступа к тесту",
+    "userAccessExpired" : "У пользователья нет доступ к тесту"
   },
   "register": {
     "Personal Information" : "Персоналные данные",
@@ -288,4 +291,6 @@
   "Previous" : "Предидущий",
   "submit" : "Отправить",
   "Next" : "Следующий",
+  "AccessExpired" : "Завершення підписки",
+  "AccessExpiredDetail" : "Друже, SCAN VISION - це не лише гра. Щодня Ви невтомно працюєте над покращенням свого зору. Нагадуємо Вам про необхідність контрольного візиту до лікаря для діагностики свого стану та, у разі потреби, корекції процесу тренувань."
 }
