style and text fix

--- a/resources/js/plugins/i18n/locales/ua.json
+++ b/resources/js/plugins/i18n/locales/ua.json
@@ -243,8 +243,8 @@
   "menu" : {
     "Patients" : "Користувачі",
     "Doctors" : "Лікарі",
-    "PromoCodes" : "Промокоды",
-    "AllPatients" : "Все пользователи",
+    "PromoCodes" : "Промокоди",
+    "AllPatients" : "Всі користувачі"
   },
   "doctor":{
     "addTitle" : "Додати лікаря",
@@ -256,45 +256,46 @@
     "ConfirmDelete" : "Ви підтверджуєте видалення?",
     "Removed" : "Видалення лікаря",
     "RemovedMsg" : "Лікаря видалено!",
-    "minutes" : "Количество доступніх минут на день"
+    "minutes" : "Кількість доступних хвилин на день"
   },
   "promo":{
-    "status" : "Доступный",
+    "status" : "Доступний",
     "code" : "Промокод",
     "created_at" : "Дата створения",
-    "activated_at" : "Выкорастный",
-    "user_email" : "Почта пользотвателя",
-    "days" : "Дни",
-    "minutes" : "Минуты",
-    "promoCodes" : "Промокоды",
-    "addTitle" : "Додати промокоды",
-    "editTitle" : "Редактировать промокод",
-    "endDate" : "Активен до",
-    "today" : "Сегодня",
-    "LimitTimeToOneDay" : "Доступный на день",
-    "todayEnd" : "На  сегодня оставшихся минут",
-    "youHaveNotAccess" : "У вас нет доступа к тесту",
-    "userAccessExpired" : "У пользователья нет доступ к тесту",
-    "activate" :"Активация промокода",
-    "ActivatePromoCode" : "Активировать промокод",
-    "AccessMinutesExceeded" : "Нажаль час тренувань на сьогодні вичерпаний :( Чекаємо Вас завтра :)",
+    "activated_at" : "Використаний",
+    "user_email" : "Пошта користувача",
+    "days" : "Дні",
+    "minutes" : "хвилини",
+    "promoCodes" : "Промокоди",
+    "promoCodesNewLine" : "Промокоди (Кожен промокод з наступного рядка)",
+    "addTitle" : "Додати промокоди",
+    "editTitle" : "Редагувати промокод",
+    "endDate" : "Активний до",
+    "today" : "Сьогодні використано",
+    "LimitTimeToOneDay" : "Доступно на день",
+    "todayEnd" : "На  сьогодні залишилось хвилин",
+    "youHaveNotAccess" : "У вас немає доступу до тесту",
+    "userAccessExpired" : "В користувача немає доступу до тесту",
+    "activate" :"Активація промокоду",
+    "ActivatePromoCode" : "Активувати промокод",
+    "AccessMinutesExceeded" : "Нажаль час тренувань на сьогодні вичерпаний :(  Чекаємо Вас завтра :)"
   },
   "register": {
-    "Personal Information" : "Персоналные данные",
+    "Personal Information" : "Персональні дані",
     "name" : "Ім’я",
     "nick_name" : "Прізвище",
     "phone":"Телефон  (де є телеграм)",
     "region":"Область",
     "Questions" : "Скарги",
-    "Acccount information" : "Пользовательские данные",
+    "Acccount information" : "Дані користувача",
     "email" : "Email",
     "promoCode": "Промокод",
     "password" : "Пароль",
-    "Confirm Password" : "Повторіть пароль",
+    "Confirm Password" : "Повторіть пароль"
   },
-  "Previous" : "Предидущий",
-  "submit" : "Отправить",
-  "Next" : "Следующий",
+  "Previous" : "Попередній",
+  "submit" : "Відправити",
+  "Next" : "Наступний",
   "AccessExpired" : "Завершення підписки",
   "AccessExpiredDetail" : "Друже, SCAN VISION - це не лише гра. Щодня Ви невтомно працюєте над покращенням свого зору. Нагадуємо Вам про необхідність контрольного візиту до лікаря для діагностики свого стану та, у разі потреби, корекції процесу тренувань."
 }
