--- a/resources/js/plugins/i18n/locales/ua.json
+++ b/resources/js/plugins/i18n/locales/ua.json
@@ -241,6 +241,7 @@
     "ok" : "OK"
   },
   "menu" : {
+    "Profile" : "Профиль",
     "Patients" : "Користувачі",
     "Doctors" : "Лікарі",
     "PromoCodes" : "Промокоди",
