style and text fix

--- a/resources/js/plugins/i18n/locales/ua.json
+++ b/resources/js/plugins/i18n/locales/ua.json
@@ -241,7 +241,7 @@
     "ok" : "OK"
   },
   "menu" : {
-    "Profile" : "Профиль",
+    "Profile" : "Профіль",
     "Patients" : "Користувачі",
     "Doctors" : "Лікарі",
     "PromoCodes" : "Промокоди",
@@ -276,7 +276,7 @@
     "LimitTimeToOneDay" : "Доступно на день",
     "todayEnd" : "На  сьогодні залишилось хвилин",
     "youHaveNotAccess" : "У вас немає доступу до тесту",
-    "userAccessExpired" : "В користувача немає доступу до тесту",
+    "userAccessExpired" : "У Вас немає доступу до тесту",
     "activate" :"Активація промокоду",
     "ActivatePromoCode" : "Активувати промокод",
     "AccessMinutesExceeded" : "Нажаль час тренувань на сьогодні вичерпаний :(  Чекаємо Вас завтра :)"
@@ -294,9 +294,9 @@
     "password" : "Пароль",
     "Confirm Password" : "Повторіть пароль"
   },
-  "Previous" : "Попередній",
-  "submit" : "Відправити",
-  "Next" : "Наступний",
-  "AccessExpired" : "Завершення підписки",
+  "Previous" : "Назад",
+  "submit" : "Зареєструватись",
+  "Next" : "Далі",
+  "AccessExpired" : "Час підписки вичерпано",
   "AccessExpiredDetail" : "Друже, SCAN VISION - це не лише гра. Щодня Ви невтомно працюєте над покращенням свого зору. Нагадуємо Вам про необхідність контрольного візиту до лікаря для діагностики свого стану та, у разі потреби, корекції процесу тренувань."
 }
